[gd_scene load_steps=29 format=3 uid="uid://d0jjoti2mlflx"]

[ext_resource type="Script" uid="uid://blqbu6ovkyikq" path="res://World/pause/pauseMenu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://ddvfoyjuleyn" path="res://Save/Fonts/PlaypenSansArabic-Bold.ttf" id="2_3uuvd"]
[ext_resource type="Texture2D" uid="uid://l6tomt3tegxh" path="res://Assets/logo&Ui2/CheckBox_Checked.png" id="4_d78ly"]
[ext_resource type="Texture2D" uid="uid://bl06ruurmtysl" path="res://Assets/logo&Ui2/CheckBox_NotChecked.png" id="5_4os2k"]
[ext_resource type="Texture2D" uid="uid://coduhbgijsrm2" path="res://Assets/logo&Ui2/Circle.png" id="6_2onhb"]
[ext_resource type="PackedScene" uid="uid://duo0i845dfbak" path="res://main/set/input/button.tscn" id="7_ijxen"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jcbk5"]
bg_color = Color(0, 0, 0, 0.482353)

[sub_resource type="Theme" id="Theme_3uuvd"]
Button/colors/font_hover_color = Color(0.458824, 0.898039, 0.27451, 1)
Button/colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
Button/colors/font_pressed_color = Color(0.458824, 0.898039, 0.27451, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3uuvd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5nykr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5nykr"]
bg_color = Color(0.458824, 0.898039, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aypyb"]
bg_color = Color(0, 0, 0, 0.462745)

[sub_resource type="GDScript" id="GDScript_xyfr8"]
script/source = "extends Panel

@onready var screen_shake_checkBox = %CheckBox
@onready var master_volume_slider = %Master_music_slider
@onready var sfx_volume_slider = %SFX_music_slider
var master_bus_index = AudioServer.get_bus_index(\"Master\")
var sfx_bus_index = AudioServer.get_bus_index(\"Sfx\")

func _ready() -> void:
	
	# Load video settings
	var video_settings = ConfigFileHandler.load_video_settings()
	
	# Load and apply screen shake setting
	if video_settings.has(\"screen_shake\"):
		var screen_shake_value = video_settings[\"screen_shake\"]
		%CheckBox.button_pressed = screen_shake_value
		Global.screen_shake = screen_shake_value

	# Load audio settings
	var audio_settings = ConfigFileHandler.load_audio_settings()
	
	# Load and apply master volume setting
	if audio_settings.has(\"master_volume\"):
		var master_volume = audio_settings[\"master_volume\"]
		master_volume_slider.value = master_volume * 100
		AudioServer.set_bus_volume_db(master_bus_index, linear_to_db(master_volume))

	# Load and apply sfx volume setting
	if audio_settings.has(\"sfx_volume\"):
		var sfx_volume = audio_settings[\"sfx_volume\"]
		sfx_volume_slider.value = sfx_volume * 100
		AudioServer.set_bus_volume_db(sfx_bus_index, linear_to_db(sfx_volume))

	
func _on_back_pressed() -> void:
	self.hide()
	$\"../../Panel\".show()
	
func _on_keyboard_bind_pressed() -> void:
	self.hide()
	%InputSetting.show()

func _on_check_box_toggled(toggled_on: bool) -> void:
	Global.screen_shake = toggled_on
	ConfigFileHandler.save_video_setting(\"screen_shake\", toggled_on)

func _on_sfx_music_slider_drag_ended(value_changed: bool) -> void:
	if value_changed:
		var sfx_value = sfx_volume_slider.value / 100
		ConfigFileHandler.save_audio_setting(\"sfx_volume\", sfx_value)

func _on_master_music_slider_drag_ended(value_changed: bool) -> void:
	if value_changed:
		var master_value = master_volume_slider.value / 100
		ConfigFileHandler.save_audio_setting(\"master_volume\", master_value)

func _on_master_music_slider_value_changed(value: float) -> void:
	var volume_linear = value / 100
	AudioServer.set_bus_volume_db(master_bus_index, linear_to_db(volume_linear))

func _on_sfx_music_slider_value_changed(value: float) -> void:
	var volume_linear = value / 100
	AudioServer.set_bus_volume_db(sfx_bus_index, linear_to_db(volume_linear))
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_htsnt"]

[sub_resource type="Image" id="Image_uu4al"]
data = {
"data": PackedByteArray(177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 178, 178, 178, 0, 178, 178, 178, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 178, 178, 178, 0, 178, 178, 178, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 178, 178, 178, 0, 178, 178, 178, 0, 177, 177, 177, 0, 177, 177, 177, 0, 177, 177, 177, 0, 178, 178, 178, 0, 178, 178, 178, 0, 177, 177, 177, 0, 177, 177, 177, 153, 177, 177, 177, 166, 177, 177, 177, 18, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 177, 177, 177, 18, 177, 177, 177, 166, 178, 178, 178, 151, 178, 178, 178, 0, 177, 177, 177, 0, 177, 177, 177, 166, 178, 178, 178, 217, 178, 178, 178, 178, 178, 178, 178, 18, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 18, 178, 178, 178, 179, 178, 178, 178, 217, 178, 178, 178, 165, 178, 178, 178, 0, 177, 177, 177, 0, 177, 177, 177, 18, 178, 178, 178, 178, 178, 178, 178, 217, 178, 178, 178, 178, 178, 178, 178, 18, 178, 178, 178, 18, 178, 178, 178, 179, 178, 178, 178, 217, 178, 178, 178, 178, 178, 178, 178, 17, 178, 178, 178, 0, 177, 177, 177, 0, 178, 178, 178, 0, 178, 178, 178, 18, 178, 178, 178, 178, 178, 178, 178, 217, 178, 178, 178, 197, 178, 178, 178, 197, 178, 178, 178, 217, 178, 178, 178, 178, 178, 178, 178, 17, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 18, 178, 178, 178, 178, 178, 178, 178, 217, 178, 178, 178, 217, 178, 178, 178, 178, 178, 178, 178, 17, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 18, 178, 178, 178, 165, 178, 178, 178, 165, 178, 178, 178, 17, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0, 178, 178, 178, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id="ImageTexture_6qndc"]
image = SubResource("Image_uu4al")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6qndc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_byjw7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xq5w6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qndc"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umowm"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jund"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afqpu"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8rujg"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxvyx"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_hkps6"]
default_font = ExtResource("2_3uuvd")
OptionButton/colors/font_color = Color(0.875, 0.875, 0.875, 1)
OptionButton/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
OptionButton/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
OptionButton/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
OptionButton/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
OptionButton/colors/font_outline_color = Color(0, 0, 0, 1)
OptionButton/colors/font_pressed_color = Color(1, 1, 1, 1)
OptionButton/constants/arrow_margin = 4
OptionButton/constants/h_separation = 4
OptionButton/constants/modulate_arrow = 0
OptionButton/constants/outline_size = 0
OptionButton/font_sizes/font_size = 16
OptionButton/fonts/font = ExtResource("2_3uuvd")
OptionButton/icons/arrow = SubResource("ImageTexture_6qndc")
OptionButton/icons/icon = null
OptionButton/styles/disabled = SubResource("StyleBoxEmpty_6qndc")
OptionButton/styles/disabled_mirrored = SubResource("StyleBoxEmpty_byjw7")
OptionButton/styles/focus = SubResource("StyleBoxEmpty_xq5w6")
OptionButton/styles/hover = SubResource("StyleBoxFlat_6qndc")
OptionButton/styles/hover_mirrored = SubResource("StyleBoxFlat_umowm")
OptionButton/styles/normal = SubResource("StyleBoxFlat_8jund")
OptionButton/styles/normal_mirrored = SubResource("StyleBoxFlat_afqpu")
OptionButton/styles/pressed = SubResource("StyleBoxFlat_8rujg")
OptionButton/styles/pressed_mirrored = SubResource("StyleBoxFlat_gxvyx")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ikwsw"]

[sub_resource type="GDScript" id="GDScript_d78ly"]
script/source = "extends Control


@onready var input_button_scene = preload(\"res://main/set/input/input_button.tscn\")
@onready var action_list = $PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList


var is_remapping = false
var action_to_remap = null
var remapping_button = null
var input_actions = {
	\"dash\": \"Dash\",
	\"jump\": \"Jump\",
	\"ui_right\": \"Move Right\",
	\"ui_left\": \"Move Left\",
}

func _ready() -> void:
	_create_action_list()


func _create_action_list():
	InputMap.load_from_project_settings()
	for item in action_list.get_children():
		item.queue_free()
		
	for action in input_actions:
		var button = input_button_scene.instantiate()
		var action_label = button.find_child(\"LabelAction\")
		var input_label = button.find_child(\"LabelInput\")
		
		action_label.text = input_actions[action]
		
		var events = InputMap.action_get_events(action)
		if events.size() > 0:
			input_label.text = events[0].as_text().trim_suffix(\" (Physical)\")
		else:
			input_label.text = \"\"
		
		action_list.add_child(button)
		button.pressed.connect(_on_input_button_pressed.bind(button, action))
		
		
func _on_input_button_pressed(button, action):
	if !is_remapping:
		is_remapping = true
		action_to_remap = action
		remapping_button = button
		button.find_child(\"LabelInput\").text = \"Press Key To Bind...\"
		
		
func _input(event):
	if is_remapping:
		if(
			event is InputEventKey ||
			(event is InputEventMouseButton && event.pressed)
		):
			
			if event is InputEventMouseButton && event.double_click:
				event.double_click = false
			
			InputMap.action_erase_events(action_to_remap)
			InputMap.action_add_event(action_to_remap, event)
			_update_action_list(remapping_button, event)
			
			is_remapping = false 
			action_to_remap = null
			remapping_button = null
			
			accept_event()


func _update_action_list(button, event):
	button.find_child(\"LabelInput\").text = event.as_text().trim_suffix(\" (Physical)\")


func _on_reset_button_pressed() -> void:
	_create_action_list()


func _on_back_pressed() -> void:
	self.hide()
	%Setting_pannel.show()
"

[node name="pauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 322.0
offset_bottom = 181.0
pivot_offset = Vector2(20, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_jcbk5")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="PlayButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
light_mask = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_3uuvd")
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxEmpty_3uuvd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5nykr")
text = "Reseme"
flat = true

[node name="OptionsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
light_mask = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_3uuvd")
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxEmpty_3uuvd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5nykr")
text = "Options"
flat = true

[node name="ExitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
light_mask = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_3uuvd")
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxEmpty_3uuvd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5nykr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5nykr")
text = "Exit"
flat = true

[node name="Setting" type="Node" parent="."]

[node name="Setting_pannel" type="Panel" parent="Setting"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_aypyb")
script = SubResource("GDScript_xyfr8")

[node name="Exit" type="Label" parent="Setting/Setting_pannel"]
layout_mode = 0
offset_left = 118.0
offset_top = 11.0
offset_right = 191.0
offset_bottom = 43.0
theme_override_colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxEmpty_htsnt")
text = "Settings"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Setting/Setting_pannel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 39.0
offset_top = 8.0
offset_right = 288.0
offset_bottom = 8.0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Setting/Setting_pannel/MarginContainer"]
layout_mode = 2

[node name="Exit" type="Label" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxEmpty_htsnt")
horizontal_alignment = 1

[node name="Video_setting2" type="HBoxContainer" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Screen_Shake" type="Label" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_htsnt")
text = "Language"

[node name="Control" type="Control" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting2"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_hkps6")
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 10
selected = 1
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "Ar"
popup/item_0/id = 0
popup/item_1/text = "Eng"
popup/item_1/id = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting2"]
custom_minimum_size = Vector2(50.215, 0)
layout_mode = 2
ratio = 0.3694
stretch_mode = 3
alignment_horizontal = 2

[node name="Video_setting" type="HBoxContainer" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Screen_Shake" type="Label" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_htsnt")
text = "Screen Shake"

[node name="Control" type="Control" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_icons/checked = ExtResource("4_d78ly")
theme_override_icons/unchecked = ExtResource("5_4os2k")
flat = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting"]
custom_minimum_size = Vector2(50.215, 0)
layout_mode = 2
ratio = 0.3694
stretch_mode = 3
alignment_horizontal = 2

[node name="Music_setting1" type="HBoxContainer" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Screen_Shake" type="Label" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting1"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_htsnt")
text = "Master Music"

[node name="Control" type="Control" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master_music_slider" type="HSlider" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("6_2onhb")
theme_override_icons/grabber_highlight = ExtResource("6_2onhb")
theme_override_icons/grabber_disabled = ExtResource("6_2onhb")
theme_override_icons/tick = ExtResource("6_2onhb")
max_value = 1.0
step = 0.2

[node name="Control2" type="Control" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting1"]
custom_minimum_size = Vector2(-0.01, 0)
layout_mode = 2

[node name="Music_setting2" type="HBoxContainer" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Screen_Shake" type="Label" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_htsnt")
text = "SFX Music      "

[node name="Control" type="Control" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFX_music_slider" type="HSlider" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("6_2onhb")
theme_override_icons/grabber_highlight = ExtResource("6_2onhb")
theme_override_icons/grabber_disabled = ExtResource("6_2onhb")
theme_override_icons/tick = ExtResource("6_2onhb")
max_value = 1.0
step = 0.2

[node name="Control2" type="Control" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting2"]
custom_minimum_size = Vector2(-0.01, 0)
layout_mode = 2

[node name="KeyboardBind" type="Button" parent="Setting/Setting_pannel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_3uuvd")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_htsnt")
text = "KeyBoard Bind"

[node name="Back" type="Button" parent="Setting/Setting_pannel"]
layout_mode = 0
offset_left = 280.0
offset_top = -1.0
offset_right = 313.0
offset_bottom = 30.0
theme_override_colors/font_outline_color = Color(0.266667, 0.176471, 0.137255, 1)
theme_override_constants/outline_size = 5
theme_override_styles/focus = SubResource("StyleBoxEmpty_ikwsw")
text = "X"
flat = true

[node name="InputSetting" parent="Setting" instance=ExtResource("7_ijxen")]
unique_name_in_owner = true
visible = false
script = SubResource("GDScript_d78ly")

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_quitButton_pressed"]
[connection signal="toggled" from="Setting/Setting_pannel/MarginContainer/VBoxContainer/Video_setting/CheckBox" to="Setting/Setting_pannel" method="_on_check_box_toggled"]
[connection signal="drag_ended" from="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting1/Master_music_slider" to="Setting/Setting_pannel" method="_on_master_music_slider_drag_ended"]
[connection signal="value_changed" from="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting1/Master_music_slider" to="Setting/Setting_pannel" method="_on_master_music_slider_value_changed"]
[connection signal="drag_ended" from="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting2/SFX_music_slider" to="Setting/Setting_pannel" method="_on_sfx_music_slider_drag_ended"]
[connection signal="value_changed" from="Setting/Setting_pannel/MarginContainer/VBoxContainer/Music_setting2/SFX_music_slider" to="Setting/Setting_pannel" method="_on_sfx_music_slider_value_changed"]
[connection signal="pressed" from="Setting/Setting_pannel/MarginContainer/VBoxContainer/KeyboardBind" to="Setting/Setting_pannel" method="_on_keyboard_bind_pressed"]
[connection signal="pressed" from="Setting/Setting_pannel/Back" to="Setting/Setting_pannel" method="_on_back_pressed"]
[connection signal="pressed" from="Setting/InputSetting/Back" to="Setting/InputSetting" method="_on_back_pressed"]

[editable path="Setting/InputSetting"]
